--- a/SiteSolarMetrics/estilos/estilo.css
+++ b/SiteSolarMetrics/estilos/estilo.css
@@ -22,7 +22,7 @@ body {
     width: 98%;
     display: flex;
     flex-flow: column;
-    gap: 5px;
+    gap: 0px;
     border-radius: 8px;
 }
 
@@ -30,16 +30,17 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(40, 43, 0, 0.5);
+    background-color: rgba(40, 43, 0, 0.527);
     /* Fundo preto com 50% de transparência */
     color: white;
     /* Texto opaco */
     padding: 10px 20px;
     border-radius: 8px 8px 0 0;
+
 }
 
 .header-bottom {
-    background-color: rgba(255, 251, 0, 0.116);
+    background-color: rgba(255, 251, 0, 0.055);
     /* Fundo preto com 50% de transparência */
     color: white;
     /* Texto opaco */
@@ -49,12 +50,20 @@ body {
 }
 
 .logo img {
-    width: 120px;
+    width: 150px;
+    padding: 15px;
 }
 
 .nav {
     display: inline-flex;
     gap: 25px;
+    font-family: 'LFT Etica';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 43px;
+
+    color: #FFFFFF;
 }
 
 .nav a {
@@ -65,17 +74,24 @@ body {
 
 /* Botão de login com efeito de transparência */
 .login-button {
+    cursor: pointer;
     background-color: #e1e417;
     border: none;
-    padding: 8px 18px;
+    padding: 10px 22.5px;
     border-radius: 25px;
-    cursor: pointer;
     transition: background-color 0.3s ease, opacity 0.3s ease;
+    font-family: 'LFT Etica';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 32px;
+    text-align: center;
 }
 
 .login-button:hover {
-    opacity: 0.8;
-    /* Torna o botão semi-transparente ao passar o mouse */
+    color: #e1e417;
+    background-color: transparent; 
+    border: 2px solid #e1e417; 
 }
 
 /* Banner com imagem de fundo */
@@ -110,18 +126,74 @@ body {
 
 /* Título sobre o banner */
 .banner-title {
-    font-size: 2.5em;
-    font-weight: bold;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    border-radius: 8px;
-    z-index: 1;
+    width: 1815px;
+    height: 296px;
+    font-family: 'LFT Etica';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 115px;
+    
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
 }
 
 .banner-title span {
     color: #fbff00;
+    display: inline;
     /* Cor de destaque para "SolarMetrics" */
+}
+.background-carousel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2; /* Certifique-se de que ele fique atrás de tudo */
+    overflow: hidden;
+}
+
+/* Slides individuais */
+.carousel-slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    transition: opacity 1.5s ease-in-out;
+    animation: carouselAnimation 12s infinite;
+}
+@keyframes carouselAnimation {
+    0%, 33% {
+        opacity: 1;
+    }
+    34%, 100% {
+        opacity: 0;
+    }
+}
+
+/* Ajuste para cada slide */
+.carousel-slide:nth-child(1) {
+    animation-delay: 0s;
+    filter: grayscale(100%);
+    filter: brightness(50%);
+}
+.carousel-slide:nth-child(2) {
+    animation-delay: 4s;
+    filter: grayscale(100%);
+    filter: brightness(50%);
+}
+.carousel-slide:nth-child(3) {
+    animation-delay: 8s;
+    filter: grayscale(100%);
+    filter: brightness(50%);
+}
+.carousel-slide:nth-child(4) {
+    animation-delay: 12s;
+    filter: grayscale(100%);
+    filter: brightness(50%);
 }
 
 /* FAQ Section */
@@ -292,7 +364,7 @@ body {
 /* Centralizar o formulário */
 .loginpage {
     position: absolute;
-    margin-top: 50px;
+    margin-top: 100px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -315,14 +387,20 @@ body {
     margin: 5px;
     color: white;
     background-color: transparent;
-    border: 1px solid yellow;
-    border-radius: 5px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
+    border: none; /* remove todas as bordas */
+    border-bottom: 2px solid white; /* borda inferior branca quando desativada */
+    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 
+    font-family: 'LFT Etica';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 10px;
+}
 .botaologin.ativo {
-    background-color: yellow;
-    color: black;
+    cursor: pointer;
+    color: #e1e417;
+    border-bottom: 2px solid yellow;
 }
 
 .caixalogin {
