--- a/SiteSolarMetrics/estilos/estilo.css
+++ b/SiteSolarMetrics/estilos/estilo.css
@@ -31,9 +31,7 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: rgba(40, 43, 0, 0.527);
-    /* Fundo preto com 50% de transparência */
     color: white;
-    /* Texto opaco */
     padding: 10px 20px;
     border-radius: 8px 8px 0 0;
 
@@ -41,9 +39,7 @@ body {
 
 .header-bottom {
     background-color: rgba(255, 251, 0, 0.055);
-    /* Fundo preto com 50% de transparência */
     color: white;
-    /* Texto opaco */
     padding: 10px;
     text-align: right;
     border-radius: 0 0 8px 8px;
@@ -90,8 +86,8 @@ body {
 
 .login-button:hover {
     color: #e1e417;
-    background-color: transparent; 
-    border: 2px solid #e1e417; 
+    background-color: transparent;
+    border: 2px solid #e1e417;
 }
 
 /* Banner com imagem de fundo */
@@ -99,7 +95,6 @@ body {
     position: relative;
     width: 100%;
     height: 100vh;
-    /* Cobre toda a altura da viewport */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -114,7 +109,6 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
-    /* Fica atrás do conteúdo */
 }
 
 .banner h1 {
@@ -133,7 +127,7 @@ body {
     font-weight: 700;
     font-size: 96px;
     line-height: 115px;
-    
+
     color: #FFFFFF;
     display: flex;
     align-items: center;
@@ -142,15 +136,15 @@ body {
 .banner-title span {
     color: #fbff00;
     display: inline;
-    /* Cor de destaque para "SolarMetrics" */
 }
+
 .background-carousel {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -2; /* Certifique-se de que ele fique atrás de tudo */
+    z-index: -2;
     overflow: hidden;
 }
 
@@ -165,11 +159,16 @@ body {
     transition: opacity 1.5s ease-in-out;
     animation: carouselAnimation 12s infinite;
 }
+
 @keyframes carouselAnimation {
-    0%, 33% {
+
+    0%,
+    33% {
         opacity: 1;
     }
-    34%, 100% {
+
+    34%,
+    100% {
         opacity: 0;
     }
 }
@@ -180,16 +179,19 @@ body {
     filter: grayscale(100%);
     filter: brightness(50%);
 }
+
 .carousel-slide:nth-child(2) {
     animation-delay: 4s;
     filter: grayscale(100%);
     filter: brightness(50%);
 }
+
 .carousel-slide:nth-child(3) {
     animation-delay: 8s;
     filter: grayscale(100%);
     filter: brightness(50%);
 }
+
 .carousel-slide:nth-child(4) {
     animation-delay: 12s;
     filter: grayscale(100%);
@@ -200,7 +202,6 @@ body {
 .faq {
     padding: 20px 50px;
     background-color: #1e1e1e;
-    margin: 20px 50px;
     border-radius: 8px;
 }
 
@@ -231,7 +232,7 @@ body {
 
 /* Transição suave para a cor de fundo da pergunta */
 .faq-item {
-    background-color: #333;
+    background-color: #aaaaaa;
     margin: 15px 0;
     padding: 15px;
     border-radius: 5px;
@@ -246,14 +247,14 @@ body {
     align-items: center;
     cursor: pointer;
     font-weight: bold;
-    color: white;
+    color: black;
 
 }
 
 .faq-answer {
     display: none;
     margin-top: 10px;
-    color: white;
+    color: black;
 }
 
 /* Seção de Integrantes */
@@ -320,8 +321,6 @@ body {
     align-items: center;
     padding: 20px 50px;
     background-color: #2e2e2e;
-    border-radius: 8px;
-    margin: 10px 50px 20px 50px;
 }
 
 .footer img {
@@ -387,8 +386,10 @@ body {
     margin: 5px;
     color: white;
     background-color: transparent;
-    border: none; /* remove todas as bordas */
-    border-bottom: 2px solid white; /* borda inferior branca quando desativada */
+    border: none;
+    /* remove todas as bordas */
+    border-bottom: 2px solid white;
+    /* borda inferior branca quando desativada */
     transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 
     font-family: 'LFT Etica';
@@ -397,6 +398,7 @@ body {
     font-size: 20px;
     line-height: 10px;
 }
+
 .botaologin.ativo {
     cursor: pointer;
     color: #e1e417;
@@ -551,7 +553,7 @@ button[type="submit"]:hover {
     padding: 0px;
     border-radius: 8px;
     text-align: center;
-        
+
 }
 
 .bannersobre h2 span {
@@ -570,7 +572,8 @@ button[type="submit"]:hover {
 
 .paginasobre h2 {
     font-size: 2.5rem;
-    color: white; text-shadow: black 0.1em 0.1em 0.2em;
+    color: white;
+    text-shadow: black 0.1em 0.1em 0.2em;
     margin-bottom: 20px;
 }
 
@@ -596,7 +599,7 @@ button[type="submit"]:hover {
     align-items: center;
     border: 1px solid yellow;
     margin: 20px auto;
-    max-width: 800px;
+    max-width: 70%;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -608,8 +611,8 @@ button[type="submit"]:hover {
 }
 
 .caixagrande img {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     margin: 20px;
 }
 
@@ -619,14 +622,86 @@ button[type="submit"]:hover {
     border-left: 1px solid yellow;
 }
 
+.telegram-container {
+    display: flex;
+    align-items: center;
+}
+
+.telegram-container img {
+    width: 40px;
+    height: 40px;
+}
+
 .caixamenor h4 {
     font-size: 1.5rem;
-    color: white; text-shadow: black 0.1em 0.1em 0.2em;
+    color: white;
+    text-shadow: black 0.1em 0.1em 0.2em;
     margin-bottom: 10px;
 }
 
 .caixamenor p {
     font-size: 1rem;
     line-height: 1.6;
-    color: white; text-shadow: black 0.1em 0.1em 0.2em;
+    color: white;
+    text-shadow: black 0.1em 0.1em 0.2em;
+}
+
+.servicos {
+    background-color: #121212;
+    padding: 40px 20px;
+    text-align: center;
+}
+
+.servicos-header h2 {
+    color: #ffffff;
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+}
+
+.underline {
+    width: 50px;
+    height: 4px;
+    background-color: #D7FF4C;
+    margin: 0 auto 20px auto;
+}
+
+.container-servicos {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.caixa-servicos {
+    background-color: #424141;
+    color: white;
+    flex: 1;
+    max-width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: left;
+    transition: transform 0.3s ease-in-out;
+}
+
+.caixa-servicos:hover {
+    transform: scale(1.05);
+}
+
+.caixa-servicos img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+.caixa-servicos h4 {
+    color: #D7FF4C;
+    font-size: 1.25rem;
+    margin-bottom: 10px;
+}
+
+.caixa-servicos p {
+    font-size: 1rem;
+    line-height: 1.6;
+    color: #e0e0e0;
 }
