--- a/SiteSolarMetrics/estilos/estilo.css
+++ b/SiteSolarMetrics/estilos/estilo.css
@@ -339,12 +339,17 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
-    color: #9F9B9B; 
+    color: #9F9B9B;
+    letter-spacing: 0.5px; 
+}
+
+#social {
+    width: 40px
 }
 
 .footer img {
     width: 140px;
-    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .footer p {
@@ -356,6 +361,7 @@ body {
 .social-icons {
     display: flex;
     gap: 15px;
+    align-items: center;
 }
 
 /* Efeito de hover nos ícones das redes sociais */
